[package]
name = "molnett-lb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
error = "0.1.9"
hyper = { version = "0.14.25", features = ["full"] }
pretty_env_logger = "0.4.0"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
